replace from jpa to mongodb: 1. maven dependenies 2. application settings to mongodb, 3. repositories, 4. db migration data